--- a/css.css
+++ b/css.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     background: #00000;
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Noto Sans', sans-serif;
 }
 
 h1 {
