--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     background: #00000;
-    font-family: 'Noto Sans', sans-serif;
+    font-family: 'Noto Sans', 'Times New Roman', sans-serif;
 }
 
 h1 {
@@ -16,5 +16,65 @@ h1 {
 h2 {
     text-align: center; 
     font-size: 20px;
-    color: gray;
+    color: black;
 }
+
+h3 {
+    font-family: 'Times New Roman', serif;
+    color: red;
+    font-size: 1em;
+}
+
+.pause-menu{
+	display: none;
+
+	position: fixed;
+	top: 0;
+	left: 0;
+
+	height: 100%;
+	width: 100%;
+
+}
+	.background{
+		background: rgba(0, 0, 0, .5);
+	}
+	
+.menu-container{
+	margin: 0 auto;
+	margin-top: 28px;
+	width: 312px;
+}
+	.menu-button{
+		margin-top: 16px;
+
+		cursor: pointer;
+
+		width: 100%;
+
+		background: #13181d;
+
+		text-align: center;
+		line-height: 32px;
+		color: #FFFFFF; 
+
+		transition: all ease-out .25s;
+	}
+
+	.menu-button:hover{
+		background: green;
+
+		transition: all ease-out .25s;
+	}
+	
+	.menu-input{
+		margin-top: 16px;
+
+		width: 100%;
+
+		text-align: center;
+		line-height: 32px;
+		color: #000000; 
+
+		transition: all ease-out .25s;
+	}
