--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background: #00000;
+    background: #000000;
     font-family: 'Noto Sans', 'Times New Roman', sans-serif;
 }
 
@@ -16,7 +16,7 @@ h1 {
 h2 {
     text-align: center; 
     font-size: 20px;
-    color: black;
+    color: white;
 }
 
 h3 {
