--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background: #000000;
+    background: #333333;
     font-family: 'Noto Sans', 'Times New Roman', sans-serif;
 }
 
@@ -8,20 +8,18 @@ h1 {
     text-align: center; 
     font-size: 40px;
     padding-top: 10px;
-    background: -webkit-linear-gradient(#660066, #6600cc);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: #FFFFFF;
 }
 
 h2 {
     text-align: center; 
     font-size: 20px;
-    color: white;
+    color: #FFFFFF;
 }
 
 h3 {
     font-family: 'Times New Roman', serif;
-    color: red;
+    color: #FFFFFF;
     font-size: 1em;
 }
 
@@ -50,6 +48,10 @@ canvas {
 	margin: 0 auto;
 	margin-top: 28px;
 	width: 312px;
+
+	background: #EEEEEE;
+
+	padding: 10px;
 }
 	.menu-button{
 		margin-top: 16px;
@@ -83,15 +85,4 @@ canvas {
 		color: #000000; 
 
 		transition: all ease-out .25s;
-	}
-	
-	.menu-message {
-		color: #FFFFFF;
-		background: #000000;
-		
-		border-radius: 4px;
-		
-		text-align: center;
-		
-		padding: 10px;
 	}
